# photo.awesomestuff.in

./: .dockerignore  .gitignore  Application.hs  Dockerfile.build  Dockerfile.launch  Foundation.hs  Import.hs  Model.hs  Settings.hs  Types.hs  aws-photo-service.cabal  cabal.config  copy-files.sh  docker-compose.yml  package.yaml  prepare.sh  stack.yaml  thumb.sh
Handler/: Author.hs  Category.hs  Common.hs  Home.hs  Page.hs  Photo.hs  PhotoGroup.hs  Static.hs  Translation.hs
Lib/: Install.hs
admin/: .babelrc  .eslintrc.js  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  todo.md  tsconfig.json  webpack.config.js
admin/etc/: config.js
admin/src/: app.tsx  index.ejs  index.js  index.tsx
admin/src/components/: App.js  Auth.js  Categories.js  Category.js  Header.js  Main.js  Pagination.js  Photo.js  Photos.js  RootCategory.js  Translation.js  Translations.js  Upload.js  auth.tsx  categories.tsx  category.tsx  header.tsx  home.tsx  main.tsx  pagination.tsx  photo.tsx  photos.tsx  rootCategory.tsx  upload.tsx
admin/src/context/: auth.tsx  category.tsx  index.ts  photo.tsx  service.tsx  translation.tsx
admin/src/service/: api.ts  auth.js  category.ts  factory.ts  photo.ts
admin/src/store/: configure.js
admin/src/styles/: app.less  app.scss  var.scss
admin/typings/: data.d.ts
app/: DevelMain.hs  devel.hs  install.hs
client/: .babelrc  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  Dockerfile  elm-package.json  elm.js  gulpfile.babel.js  package-lock.json  package.json  postcss.config.js  sitemap.babel.js  sitemap.js  test.html  todo.md  webpack.config.js
client/admin/: .eslintrc.js  .yo-rc.json  db.json  package-lock.json  package.json  webpack.config.js
client/admin/cfg/: dev.js
client/admin/src/: index.html  index.js
client/api/: server.js  static.js
client/api/db/: categories.json  index.js  pages.json
client/assets/styles/: gallery.less  main.less  navigation.less  photo.less  var.less
client/etc/: config.js  webpack.config.base.babel.js  webpack.config.client.babel.js  webpack.config.server.babel.js
client/image-static/: .babelrc  .eslintrc  .gitignore  Dockerfile  package.json  webpack.config.babel.js
client/image-static/src/: index.js  webpack.config.base.babel.js
client/lib/: photo.js  resolution.json
client/lib/service/: BaseService.js  Category.js  Page.js  Photo.js  Translation.js
client/lib/util/: photo.js
client/react/: .babelrc  .editorconfig  .eslintignore  .eslintrc  .gitignore  gulpfile.babel.js  npm-shrinkwrap.json  package.json  todo.md  webpack.config.babel.js
client/react/etc/: webpack.config.base.babel.js  webpack.config.client.babel.js  webpack.config.server.babel.js
client/react/src/: app.js  config.json  index.html  index.js  routes.js  server.js
client/src/: Main.elm  client.js  createStore.js  index.html  index.js  render.js  routeConfig.js  routes.js  server.js  todo.md
client/src/App/: Actions.elm  Config.elm  Layout.elm  Locale.elm  Model.elm  Ports.elm  Resolutions.elm  Routes.elm
client/src/Handler/: Actions.elm  Config.elm  Default.elm  Layout.elm  Locale.elm  Routes.elm  Static.elm  Widgets.elm
client/src/Lib/: Component.elm  Functions.elm  Helpers.elm  Mailbox.elm  Matcher.elm  Router.elm  Types.elm
client/src/Service/: Photo.elm  Resolutions.elm
client/src/Util/: Util.elm
client/src/actions/: api.js  loader.js
client/src/components/: WithStylesContext.js  footer.js  main.js
client/src/etc/: config.json.example
client/src/lib/: meta.js  route.js  utils.js
client/src/page/: category.js  home.js  index.js  main.js  page.js  photo.js
client/src/polyfill/: scope.js
client/src/reducers/: api.js  index.js  loader.js
client/test/: TestRunner.elm  elm-package.json
client/webpack/: universal-webpack-settings.js  webpack-dev-server.js  webpack.config.base.babel.js  webpack.config.client.babel.js  webpack.config.client.development.js  webpack.config.client.js  webpack.config.js  webpack.config.server.babel.js  webpack.config.server.development.babel.js
common/: .gitignore  package-lock.json  package.json
common/service/: photo.js
config/: models  routes  settings.yml
etc/: nginx.conf
haskell-server/: .dockerignore  .gitignore  Dockerfile.build
haskell-server/config/: keter.yml  models  test-settings.yml
haskell-server/src/: Application.hs  Foundation.hs  Model.hs  Types.hs
node-server/: .eslintrc.js  .gitignore  .sequelizerc  Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
node-server/etc/: config.js  db.json
node-server/scripts/: db.sh  wait.sh
node-server/src/: app.js  db.js
node-server/test/: migrate.js
photo-api/: .gitignore  Dockerfile  aws-photo.sql  ormconfig.js  ormconfig.json  package-lock.json  package.json  tsconfig-paths-bootstrap.js  tsconfig.json
photo-api/src/: app.ts  index.ts  thumbs.ts
photo-client/: .dockerignore  Dockerfile  package-lock.json  package.json  postcss.config.js  server.js  tsconfig.json
photo-client/assets/: assets.json
photo-client/etc/: config.js
photo-client/src/: index.html  index.tsx  sitemap.ts  style.scss  var.scss
photo-client/typings/: data.d.ts  ico.d.ts
photo-client/webpack/: webpack.client.js  webpack.config.js  webpack.server.js
scripts/: start.sh
src/: Settings.hs
src/Lib/: Install.hs
static-server/: .babelrc  Dockerfile  Makefile  package-lock.json  package.json  webpack.config.babel.js
static-server/etc/: config.js  config.json.example
static-server/src/: index.js
static/gallery/: .gitignore
(+301 files in other folders)
